--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,23 @@
 .ini
+# Dependencias
+frontend/node_modules
+
+# Archivos de entorno
+.env
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Sistema operativo
+.DS_Store
+Thumbs.db
+
+# Compilados
+dist
+build
+
+# Editor/IDE
+.vscode/
+.idea/
