--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,18 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mysql": "^2.18.1",
     "mysql2": "^3.10.0",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
-  }
+  },
+  "description": "conexion mysql desde nodejs",
+  "main": "app.js",
+  "directories": {
+    "test": "test"
+  },
+  "author": "",
+  "license": "ISC"
 }
