--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon --env-file=.env src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
@@ -13,6 +14,9 @@
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "dayjs": "^1.11.18",
+    "jest": "^30.1.3",
+    "supertest": "^7.1.4"
   }
 }
