--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,13 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
-    "express-rate-limit": "^8.1.0",
+    "express-rate-limit": "^6.11.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.0",
     "nodemailer": "^7.0.6",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
