--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "medleave-backend",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "description": "conexion mysql desde nodejs",
   "main": "src/server.js",
   "scripts": {
