--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node backend/src/app.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "mysql2": "^3.15.0",
     "sequelize": "^6.37.3"
   },
