--- a/backend/package.json
+++ b/backend/package.json
@@ -2,20 +2,22 @@
   "name": "medleave-backend",
   "version": "1.0.0",
   "description": "conexion mysql desde nodejs",
-  "main": "src/server.js",
+  "main": "src/app.js",
   "scripts": {
-  "dev": "nodemon src/server.js",
-  "start": "node src/server.js"
-
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.6.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.10.0",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "zod": "^4.1.11"
   },
+  "type": "module",
   "devDependencies": {
     "nodemon": "^3.1.10"
   },
