readme y .env.example
se agrego las instrucciones y se modificó el example para que funcione con jwt

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,28 @@
-
-MODE=local
-
-# Configuración DB
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=
-DB_NAME=a2019_acofre
+DB_NAME=A2019_acofre 
 DB_SSL=false
 
-PORT=3000
+SMTP,
+SMTP_HOST=
+SMTP_PORT=
+SMTP_SECURE=false
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM="Soporte MedLeave no-reply@medleave.local"
+
+
+Seguridad,
+RESET_CODE_TTL_MIN=10 
+minutos de validez del código,
+RESET_MAX_ATTEMPTS=5 
+intentos máximos de validación por código,
+RATE_LIMIT_WINDOW_MS=60000 
+1 min,
+RATE_LIMIT_MAX=10 
+10 req/min por IP,
+JWT,
+JWT_SECRET=devsecret
+JWT_EXPIRES=1d
