--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
   },
   "type": "module",
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   },
   "author": "",
   "license": "ISC"
