--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.15.1",
+    "nodemailer": "^7.0.9",
     "sequelize": "^6.37.3",
     "zod": "^4.1.11"
   },
