--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^9.11.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.1.0",
     "react-router-dom": "^7.9.1"
   },
