--- a/backend/package.json
+++ b/backend/package.json
@@ -8,15 +8,17 @@
     "start": "node src/app.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.76.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
-    "mysql2": "^3.15.1",
+    "mysql2": "^3.15.3",
     "nodemailer": "^7.0.9",
     "sequelize": "^6.37.3",
+    "tslib": "^2.8.1",
     "zod": "^4.1.11"
   },
   "type": "module",
