--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "dev": "nodemon src/app.js",
+    "dev:remote": "cross-env NODE_ENV=remote nodemon src/app.js",
     "start": "node src/app.js"
   },
   "dependencies": {
@@ -23,6 +24,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "cross-env": "^10.1.0",
     "jest": "^30.2.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4"
