.env.example nuevo!!

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,28 +1,46 @@
+# =========================================
+#  ENVIRONMENT CONFIGURATION EXAMPLE
+#  Copy this file as ".env" and fill values
+# =========================================
+
+# -------- GENERAL APP SETTINGS --------
+NODE_ENV=development
+APP_PORT=3000
+APP_URL=http://localhost:3000
+
+# -------- DATABASE CONFIG --------
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=
-DB_NAME=A2019_acofre 
+DB_NAME=a2019_acofre
 DB_SSL=false
+# Tip: Cambiar host/user/pass cuando se use BD remoto (.env.dev)
 
-SMTP,
-SMTP_HOST=
-SMTP_PORT=
-SMTP_SECURE=false
-SMTP_USER=
-SMTP_PASS=
-SMTP_FROM="Soporte MedLeave no-reply@medleave.local"
+# -------- MAIL / BREVO CONFIG --------
+MAIL_PROVIDER=brevo
+MAIL_HOST=smtp-relay.brevo.com
+MAIL_PORT=587
+MAIL_USER=your_brevo_user@smtp-brevo.com    # Solicitar al equipo
+MAIL_PASS=your_brevo_api_key                # Solicitar al equipo
+MAIL_FROM=medleave8@gmail.com
 
+# -------- SECURITY SETTINGS --------
+RESET_CODE_TTL_MIN=10
+RESET_MAX_ATTEMPTS=5
+RATE_LIMIT_WINDOW_MS=60000
+RATE_LIMIT_MAX=10
 
-Seguridad,
-RESET_CODE_TTL_MIN=10 
-minutos de validez del código,
-RESET_MAX_ATTEMPTS=5 
-intentos máximos de validación por código,
-RATE_LIMIT_WINDOW_MS=60000 
-1 min,
-RATE_LIMIT_MAX=10 
-10 req/min por IP,
-JWT,
-JWT_SECRET=devsecret
+# -------- JWT CONFIG --------
+JWT_SECRET=changeme                         # Solicitar al equipo
 JWT_EXPIRES=1d
+
+# -------- SUPABASE CONFIG --------
+SUPABASE_URL=https://your-instance.supabase.co  # Solicitar al equipo
+SUPABASE_ANON_KEY=changeme
+SUPABASE_SERVICE_ROLE_KEY=                      # Solicitar al equipo
+SUPABASE_BUCKET_PERFIL=perfil
+SUPABASE_BUCKET_LICENCIAS=licencias
+
+# -------- FRONTEND CONFIG --------
+VITE_API_BASE_URL=http://localhost:3000 # (.env en frontend)
