Arreglos en llamados a tablas de BD
existian consultas a la BD a tablas llamadas de otra manera distinta, lo que causaba que no se lograran las solicituedes:

queda pendiente listar las licencias y cambio de contraseña.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "dev:remote": "vite --mode remote",
     "build": "vite build",
     "preview": "vite preview"
