--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.76.1",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "express-validator": "^7.3.0",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
